Using textcite in some cases.

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -273,7 +273,7 @@ F$_1$-score.  Even for random guessing the class, precision (and F$_1$-score) is
 by the class imbalance, yielding $1$ (and $2/3$) as $\pi \to 1$.  As a result, these
 metrics should be preferred when the positive class is the minority class, so the results
 are not errouneously inflated --- and, consequently, mistakenly interpreted as good.
-\citeauthor{Williams2021}\footfullcite{Williams2021} provides an interesting discussion on
+\textcite{Williams2021}\footfullcite{Williams2021} provides an interesting discussion on
 that.
 
 Finally, besides accuracy, the other metrics do not behave well when the evaluation set is
