--- a/inductive.tex
+++ b/inductive.tex
@@ -600,7 +600,7 @@ is the necessary and sufficient condition, where
 \]
 is the \emph{growth function} of the hypothesis space $\Theta$.
 
-\citeauthor{Vapnik1968}\footfullcite{Vapnik1968} showed that the growth function either
+\textcite{Vapnik1968}\footfullcite{Vapnik1968} showed that the growth function either
 satisfies
 \[
   G(n; \Theta) = n \ln 2
@@ -703,7 +703,7 @@ learning process.  By generalization ability, we mean the ability of the learnin
 to predict the output of new data that was not seen during the training process.  However,
 it relies on the hypothesis that the number of samples tends to infinity.
 
-In fact, \citeauthor{Vapnik1999b}\footfullcite{Vapnik1999b} summarizes the bounds for the
+In fact, \textcite{Vapnik1999b}\footfullcite{Vapnik1999b} summarizes the bounds for the
 generalization ability of learning machines in the following way\footnote{ For the sake of
 the arguments, we consider only the expression for bounded losses and an hypothesis space
 with infinite number of functions.  Rigorously, the loss function may not be bounded;
@@ -1236,7 +1236,7 @@ $h = d + 1$, where $d$ is the number of dimensions of the feature space --- cons
 \cref{sub:vc-dimension-intuition}.
 
 Before we dive in the classifier that minimizes the confidence interval, consider the
-following property.  \citeauthor{Vapnik1999b}\footfullcite{Vapnik1999b} state that a
+following property.  \textcite{Vapnik1999b}\footfullcite{Vapnik1999b} state that a
 $\Delta$-margin separating hyperplane is the hyperplane
 \[
   (\vec{w} \cdot \vec{x}) - b = 0\text{, } \|\vec{w}\| = 1\text{,}
@@ -1323,7 +1323,7 @@ training data (i.e. the number of support vectors), it is a nonparametric model.
 Nonparametric models are those in which the number of parameters is not fixed and can grow
 as needed to fit the data.  This property becomes more clear when we consider the kernel
 trick, which allows the maximal margin classifier to deal with nonlinear problems.
-Consult \citeauthor{Vapnik1999b}\footfullcite{Vapnik1999b} for more details.
+Consult \textcite{Vapnik1999b}\footfullcite{Vapnik1999b} for more details.
 
 \section{Closing remarks}
 
