--- a/preprocess.tex
+++ b/preprocess.tex
@@ -866,10 +866,10 @@ feature extraction.  The difference there is that the convolution filters are ha
 while in \glspl{cnn} they are learned from the data.
 
 The study of unstructured data is a vast field and is out of the scope of this book.  I
-recommend \citeauthor{Jurafsky2008}\footnote{\fullcite{Jurafsky2008}. A new edition is
+recommend \textcite{Jurafsky2008}\footnote{\fullcite{Jurafsky2008}. A new edition is
 free to download and under preparation: \fullcite{Jurafsky2024}.} for a vast
 introduction to Natural Language Processing and
-\citeauthor{Szeliski2022}\footfullcite{Szeliski2022} for a comprehensive introduction to
+\textcite{Szeliski2022}\footfullcite{Szeliski2022} for a comprehensive introduction to
 Computer Vision.
 
 % vim: spell spelllang=en
