--- a/courses.tex
+++ b/courses.tex
@@ -87,19 +87,19 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    \multirow{2}{*}{1} & Brief history of data science \pcref{chap:history} \\
-      & Preliminaries \pcref{chap:preliminaries} \\
+    \multirow{2}{*}{1} & Brief history of data science \\
+      & Preliminaries \\
     \midrule
     2 & \bfseries Written test \\
     \midrule
-    3 & Fundamental data concepts \pcref{chap:data} \\
+    3 & Fundamental data concepts \\
     \midrule
-    4 & Stages in a data science project \pcref{chap:project} \\
+    4 & Stages in a data science project \\
     \midrule
-    5 & \multirow{2}{*}{Statistical learning theory \pcref{chap:slt}} \\
+    5 & \multirow{2}{*}{Statistical learning theory} \\
     6 &  \\
     \midrule
-    6 & \multirow{2}{*}{Data handling \pcref{chap:handling}} \\
+    6 & \multirow{2}{*}{Data handling} \\
     7 &  \\
     \midrule
     8 & \bfseries Written test \\
@@ -114,11 +114,11 @@ Any required extra material will be made available in Google Classroom.
     \midrule
     Week & Topics \\
     \midrule
-    1 & Evaluation \pcref{chap:evaluation} \\
+    1 & Evaluation \\
     \midrule
-    2 & Experimental planning \pcref{chap:planning} \\
+    2 & Experimental planning \\
     \midrule
-    3 & Ethics, privacy and legal issues \pcref{chap:ethics} \\
+    3 & Ethics, privacy and legal issues \\
     \midrule
     4 & \bfseries Written test \\
     \midrule
