Fixes and light editing up to chap 5.

--- a/about.tex
+++ b/about.tex
@@ -77,21 +77,12 @@ Hope you enjoy reading.
 
 \vspace{3em}
 
-% TODO: link to GitHub
-\begin{lparwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
-  Students can find a printable version (A4 paper, double-sided, short-edge spiral
-  binding) of this book at
-  \href{\aurl}{comp.ita.br/\textasciitilde{}verri/dsp-book-print}.
-\end{lparwithqr}
-
-\vspace{3em}
-
-\begin{parwithqr}{https://www.buymeacoffee.com/verri}
+\begin{lparwithqr}{https://www.buymeacoffee.com/verri}
   If you want to support me, you can \emph{purchase a coffee} at
   \href{\aurl}{buymeacoffee.com/verri}. I will greatly appreciate it.  I have a number of
   ideas for new books and courses, and financial support will enable me to make them a
   reality.
-\end{parwithqr}
+\end{lparwithqr}
 
 \newpage
 
