--- a/inductive.tex
+++ b/inductive.tex
@@ -18,7 +18,7 @@ predictive tasks: binary data classification and regression estimation.  We disc
 optimal solutions for these tasks in an ideal (although unrealistic) scenario where the
 distributions of the data are known.
 
-Moreover, we discuss principles that guide the learning process when the distribution of
+Moreover, we discuss principles that guide the learning process if the distribution of
 the data is unknown.  From those principles, we discuss the properties and limitations of
 the learning process.
 
