--- a/handling.tex
+++ b/handling.tex
@@ -6,9 +6,6 @@
   $\dagger$ It's dangerous to go alone! Take this.
   \par\raggedleft--- \textup{Unnamed Old Man}, The Legend of Zelda}
 
-% Important: avoid the term "data manipulation" as it has a negative connotation
-% TODO: review this introduction after finishing the remaining of the chapter
-
 In the previous chapter, I discussed the relationship between data format and data
 semantics.  We also saw in \cref{chap:project} that data tasks --- specifically
 integration and tidying --- must adjust the available data to reflect the kind of
@@ -28,7 +25,10 @@ and each column has a name.  Moreover, we assume that any value is possibly
 From a mathematical definition of such tables, we can define a set of operations that can
 be applied to them.  These operations are the building blocks of data handling pipelines:
 combinations of operations that transform a dataset into another dataset.
-I also highlight some important properties of these operations.
+
+Finally, I highlight some important properties of these operations.  Especially, the
+split-invariance property, which ensures that the operations do not add bias to the data
+due to the way the data was collected.
 
 \begin{mainbox}{Chapter remarks}
 
@@ -92,7 +92,7 @@ Each index column $K_i$ has a domain $\domainof{K_i}$, which is an enumerable se
 values.
 \end{defbox}
 
-A possible row $r$ of the table is thus indexed by a tuple $r = (k_1, \dots,
+A possible row $r$ of the table is indexed by a tuple $r = (k_1, \dots,
 k_k)$, where $k_i \in \domainof{K_i}$.  Each row has a cardinality $\rowcard[r]$, which
 represents how many times the entity represented by the row is present in the table.
 A row $r$ with $\rowcard[r] = 0$ is considered to be missing.
@@ -123,7 +123,7 @@ The value matrix $V = (v_{i, j})$ of the row $r$ is \[
 \end{defbox}
 
 We assume that value matrices --- and consequently row cardinalities --- are minimal. This
-means that there are no nested row $v_{i, 1}, \dots, v_{i, |H|}$ in the value matrices
+means that there are no nested row $$v_{i, 1}, \dots, v_{i, |H|}$$ in the value matrices
 such that $v_{i, j} = \missing$ for all $j$.
 
 From these concepts, we can define the basic operations and properties that can be applied
@@ -352,7 +352,7 @@ $s = 1$ are available to us.
 Our conclusions may change again:
 \begin{enumerate}
   \itemsep0em
-  \item We can safely assume that Alice has never taken Biology, as $\text{Chemistry}
+  \item We can safely assume that Alice has never taken the Biology class, as $\text{Chemistry}
     \not\in c(\text{Alice}, \text{subject})$.
   \item We can assume nothing about Bob's grades, as all information about him is missing.
   \item We can safely assume that Carol has only taken classes in 2020, as $c(\text{Carol},
@@ -443,8 +443,8 @@ libraries that use a declarative approach to data handling.}.
 \section{Split-invariant operations}
 \label{sec:split-invariant-ops}
 
-In this section, I present a set of operations that are split-invariant.  These operations
-can be safely applied to the data without worrying about biasing the dataset.
+In this section, I present a set of operations that are split-invariant.  One can safely
+apply these operations to the data without worrying about biasing the dataset.
 
 For each operation, we discuss its application on some tidying issues presented in
 \cref{sub:messy}.  The issues I address here\footnote{%
@@ -560,7 +560,7 @@ Another important operation is to pivot datasets.  There are two types of pivoti
 long-to-wide and wide-to-long.  These operations are reversible  and they are the inverse
 of each other.
 
-Pivoting long-to-wide requires us to specify a name column --- whose discrete and finite
+Pivoting long-to-wide requires a name column --- whose discrete and finite
 possible values will become the names of the new columns --- and a value column --- whose
 values will be \emph{spread} across the rows.  Other than these columns, all remaining columns
 must be indexes.
@@ -779,7 +779,7 @@ pivoting, to avoid unnecessary columns (wide-to-long) and to keep the only value
 \end{defbox}
 
 Sometimes, it is useful to select columns based on a function of the column properties.
-In other words, the selection operation can be parametrized by a predicate.  The predicate
+In other words, the selection operation can be parameterized by a predicate.  The predicate
 is a function that returns a logical value given the column.
 
 \begin{defbox}{Predicate selection operation}{predicate-selection}
@@ -789,7 +789,7 @@ is a function that returns a logical value given the column.
   \] where $T' = (K, H', c)$ and $H' = \{h \in H : P(h) = 1\}$.
 \end{defbox}
 
-It is trivial to see that, if $P$ do not depend on the values of the columns (i.e. has no
+It is trivial to see that, if $P$ does not depend on the values of the columns (i.e. has no
 access to $c$), the predicate selection operation is split-invariant.  This is because the
 operation does not change the rows of the table nor it depends on the values of the rows.
 
@@ -905,13 +905,13 @@ Aggregation ensures that the table has this property.
   output tuple.
 \end{defbox}
 
-As with mutation, aggregation is split-invariant as each row is treated independently,
+As with mutation, aggregation is split-invariant as it treats each row independently,
 even if the function $f$ consider order semantics of the values in the matrix.
 
 \subsection{Ungrouping}
 \label{sub:ungrouping}
 
-We discussed in the beginning of this chapter that the less index columns a table has ---
+We discussed that the less index columns a table has ---
 assuming we guarantee that all information about that entity is present --- the more
 safer it is to infer conclusions from the data.  Thus, reducing the number of indices
 must be done very carefully --- more on that in \cref{sub:projection}.
@@ -1087,7 +1087,7 @@ the bind operation between the projection into the entity \emph{student} of thes
 tables is not allowed.  The reason is that the row (Alice) will be present in both tables,
 violating the disjoint property of the tables.
 
-The consequence of this is that a poor architecture of the data schema can lead to
+The consequence is that a poor architecture of the data schema can lead to
 incorrect conclusions in the face of missing information (due to split).  This is one of
 the reasons why database normalization is so important.  The usage of parts of the tables
 without fully denormalizing them is a bad practice that can lead to spurious information.
@@ -1180,7 +1180,9 @@ One important aspect about mutating sorted values is that one can use nontrivial
 strategies --- from completing missing values to rolling windows --- to deal with implicit
 missing values.  This is a powerful tool to deal with time series data. For example, one
 can use the \code{lead} function to create a new column with the next value of the
-\code{x} column sorted by \code{year}.  If the data contains \code{x = (1, 3)} and
+\code{x} column sorted by \code{year}.
+
+If the data contains \code{x = (1, 3)} and
 \code{year = (2019, 2021)}, the calculation of the lead will result in
 \begin{center}
   \code{x = (1, ?, 3)}, \code{year = (2019, 2020, 2021)}, and \code{lead = (?, 3, ?)},
@@ -1204,7 +1206,7 @@ In recent years, some researchers made an effort to create a formal algebra for 
 transformations.  The idea is to define a set of operations that can be combined to create
 complex transformations and describe their main properties.
 
-Note that statistical data handling differ from relational algebra, where the former focus
+Note that statistical data handling differ from relational algebra, because the former focus
 on transformations and the latter on information retrieval.
 
 \textcite{Song2021}\footfullcite{Song2021}, for example, propose a formal paradigm for statistical data
