--- a/inductive.tex
+++ b/inductive.tex
@@ -251,7 +251,7 @@ approach, where the model can be trained with a small subset of labeled data and
 subset of unlabeled data --- that is, data whose outputs $y$ are unknown.
 
 \paragraph{Generative and discriminative models}
-Any learning machine generates a model that describes the relationship between the input
+Any learning machine produces a model that describes the relationship between the input
 and output data.  This model can be generative or discriminative.  Generative models
 describe the joint probability distribution $\Prob(x, y)$ and can also be used to generate new
 data.  Discriminative models, on the other hand, describe the conditional probability
@@ -565,7 +565,7 @@ Once the quantity $N$ is a random variable, we can define the VC entropy as
 \]
 where $z_i$ are i.i.d. samples drawn from some $\Prob(z)$.
 
-If $L(z, \theta)$, $\theta \in \Theta$ is a set of indicator functions (binary
+If $L(z, \theta)$, $\theta \in \Theta$ is a set of indicator functions (i.e. the loss in a binary
 classification task),  we measure the diversity of this set using the quantity $N(z_1,
 \dots, z_n; \Theta)$ that counts the number of different separations of the given sample
 can be made by the functions.  In this case, the minimal $\epsilon$-net for $\epsilon$ < 1
@@ -792,7 +792,7 @@ of each set $S_k$.  This is called an \emph{admissible structure}.
         ymin=0, ymax=1.5,
         domain=0.1:1]
 
-      \addplot[smooth] {(x - 1)^2 + 0.1} node[right, text width=1cm] {Empirical risk};
+      \addplot[smooth] {(x - 1)^2 + 0.1} node[right, text width=2cm] {Empirical risk};
       \addplot[smooth] {x^2 + 0.1} node[right, text width=2cm] {Confidence interval};
       \addplot[smooth, thick] {x^2 + (x - 1)^2 + 0.2} node[left, text width=2cm] {Risk upper bound};
 
@@ -803,7 +803,7 @@ of each set $S_k$.  This is called an \emph{admissible structure}.
   interval.  The smallest bound is found for some $k^*$ in the admissible structure.
 \end{figurebox}
 
-Given the observations $z_1, \dots, z_n$, the \gls{srm} principle chooses the function
+Given the observations $z_1, \dots, z_n$, the \gls{srm} principle chooses a function
 $L(z, \theta_n^k)$ that minimizes the empirical risk $R_n(\theta_n^k)$ in the subset
 $S_k$ for which the guaranteed risk --- upper bound considering the confidence interval
 --- is minimal.  This is a trade-off between the quality of the approximation and the
@@ -922,7 +922,7 @@ Also related to the \gls{srm} principle is the concept of \emph{regularization}.
 Regularization encourages models to learn robust patterns within the data rather than
 memorizing it.
 
-Regularization techniques usually modify the loss function by adding a penalty term that
+Regularization techniques usually modify the loss by adding a penalty term that
 depends on the complexity of the model.  So, instead of minimizing the empirical risk
 $R_n(\theta)$, the learning machine minimizes the regularized empirical risk
 \[
