Finished removing ugly overfulls.

--- a/data.tex
+++ b/data.tex
@@ -127,7 +127,7 @@ that have not been subject to any other transformation by a software program or 
 expert.  \emph{Data} is any piece of information that can be digitally stored.
 
 
-\textcite{Kelleher2018} summarize very well the challenges data science takes up:
+\textcite{Kelleher2018}\footfullcite{Kelleher2018} summarize very well the challenges of data science:
 ``extracting non-obvious and useful patterns from large data sets [\dots]; capturing,
 cleaning, and transforming [\dots] data; [storing and processing] big [\dots] data sets;
 and questions related to data ethics and regulation.''
@@ -390,7 +390,7 @@ subfields, I highlight:
   \item Databases: the study of storing and retrieving data.
 \end{itemize}
 
-The basic concepts are the same independently of the programming language, hardware
+The fundamental concepts are the same independently of the programming language, hardware
 architecture, or the \gls{rdbms} we are using.  As a consequence, in this book, I focus on
 the concepts and not on the tools.
 
