--- a/evaluation.tex
+++ b/evaluation.tex
@@ -13,7 +13,7 @@ can consider $K = \{1, 2, \dots\}$ such that $\rowcard[i] = 1$, if $i \in \{1, \
 n\}$, and $\rowcard[i] = 0$, otherwise.  That means that every row $r \in \{1, \dots, n\}$
 is present in the table.
 
-The table is split into a training set, given by indices
+The table is split into two sets: a training set, given by indices (or keys)
 $\mathcal{I}_\text{training} \in \{1, \dots, n\}$, and a test set, given by indices
 $\mathcal{I}_\text{test} \in \{1, \dots, n\}$, such that $$\mathcal{I}_\text{training}
 \cap \mathcal{I}_\text{test} = \emptyset$$ and $$\mathcal{I}_\text{training} \cup
