--- a/history.tex
+++ b/history.tex
@@ -583,7 +583,7 @@ increased the understanding of the importance of feature selection in data analy
 
 \paragraph{Shannon's information theory}
 
-The field, that studies quantification, storage and communication of information, was
+The field --- that studies quantification, storage and communication of information ---, was
 originally established by the works of Harry Nyquist (1889 -- 1976) and Ralph Hartley
 (1888 -- 1970) in the 1920s, and Claude Shannon (1916 -- 2001) in the 1940s.
 Information theory brought many important concepts to the field of data analysis, such as
@@ -632,7 +632,7 @@ A few years after, the book ``Perceptrons: an introduction to computational geom
 Marvin Minsky and Seymour Papert in 1969 draw attention to the limitations of the
 perceptron\footnote{Although the Rosenblatt was aware of the limitations of the perceptron
 and was probably working on solutions, he died in 1971.}. They showed that a single-layer
-perceptron was limited to linearly separable problems, which led to a decline in the
+perceptron was limited to linearly separable problems, a fact that led to a decline in the
 interest in neural networks.
 Consult \cref{sub:perceptron} for more details about the technique.
 
