--- a/machines.tex
+++ b/machines.tex
@@ -36,7 +36,7 @@ perceptrons) is
 
 The parameters $\vec{w}^{(1)}$ and $\vec{w}^{(2)}$ represent the hyperplanes that separate
 the classes in the hidden layer, and $\vec{w}^{(3)}$ represents how the hyperplanes are
-combined to generate the output.  If we set $\vec{w}^{(1)} = [-0.5, 1, -1]$ (like the
+combined to generate the output.  If we set weights $\vec{w}^{(1)} = [-0.5, 1, -1]$ (like the
 perceptron in the previous example) and $\vec{w}^{(2)} = [-0.5, -1, 1]$, we use the third neuron
 to combine the results of the first two neurons.  This way, a possible solution for the
 XOR problem is setting $\vec{w}^{(3)} = [0, 1, 1]$.
