--- a/preprocess.tex
+++ b/preprocess.tex
@@ -328,7 +328,7 @@ See \cref{tab:iqr-outlier}.
 \end{tablebox}
 
 More sophisticated methods can be used to detect samples that are outliers, such as using
-the definition of an outlier in the DBSCAN\footfullcite{Ester1996}.  However, this is not
+the definition of an outlier in the DBSCAN\footfullcite{Ester1996}. But, this is not
 enough to fit the parameters of the preprocessor.  The reason is that descriptive methods
 like DBSCAN  --- in this case, a method for clustering --- do not generalize to new data.
 I suggest using methods like One-Class SVM\footfullcite{Scholkopf2001} to fit the
