--- a/references.bib
+++ b/references.bib
@@ -421,7 +421,7 @@ isbn="978-3-319-17091-6"
 
 @book{CategoriesUnesp,
   author = {Aristotle},
-  title = {Categorias. ΚΑΤΗΓΟΡIΑΙ},
+  title = {Categorias (Κατηγορiαι)},
   translator = {José Veríssimo Teixeira da Mata},
   language = {greek and portuguese},
   publisher = {Editora Unesp},
@@ -584,7 +584,7 @@ pages = {107–113},
 
 @article{Scholkopf2001,
   title={Estimating the support of a high-dimensional distribution},
-  author={Sch{\"o}lkopf, Bernhard and Platt, John C and Shawe-Taylor, John and Smola, Alex J and Williamson, Robert C},
+  author={Sch{\"o}lkopf, Bernhard and Platt, John C and Shawe-Taylor, John and Smola, Alex J and William\-son, Robert C},
   journal={Neural computation},
   volume={13},
   number={7},
