--- a/structured.tex
+++ b/structured.tex
@@ -795,7 +795,7 @@ Each tuple or observation are primary substances, i.e. substances that contrasts
 everything else, particular, individual.
 
 We can also understand primary keys and fixed variables as the same concept.  They both
-describe uniquely the conditions of the sample.  They connect the entities/observational
+describe the sample uniquely.  They connect the entities/observational
 units to the remaining of the attributes.  They also should never be fed into a learning
 machine (more details in \cref{chap:slt}), since they are individual and thus not
 appropriate to generalize.
